# gfp-cgal

./: CMakeLists.txt  register.hpp
src/: cgal_nodes.cpp  cgal_nodes.hpp  isolines.cpp  isolines.hpp  linesimp.cpp  linesimp.hpp  tinsimp.cpp  tinsimp.hpp  visvalingam_cost.hpp
